objects/Professional__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Success_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Professional_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_spent__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Hours spent</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Professional Summary</relationshipLabel>
        <relationshipName>Professional_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ProfessionalHours</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Professional Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professional Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>